# python_web

./: .gitignore  Dockerfile  README.md  pyproject.toml
.bruno/Python Backend course/: bruno.json
.bruno/Python Backend course/lec01/: query_application.bru
.bruno/Python Backend course/lec01/Simple math/: factorial.bru  fib.bru  mean.bru
.github/workflows/: run_tests.yml
hw01/: README.md  asgi_base.py  run.sh  simple_math_asgi.py
hw01/tests/: run.sh
hw02/shop_api/: .dockerignore  .gitignore  Dockerfile  Dockerfile0  README.Docker.md  compose.yaml  config.py  main.py  pyproject.toml  shop.db
hw02/shop_api/api/: cart.py  item.py  router.py
hw02/shop_api/api/schemas/: cart.py  item.py
hw02/shop_api/db/: database.py  seed_db.py
hw02/shop_api/db/models/: __init__.py  cart.py  item.py
hw02/shop_api/settings/prometheus/: prometheus.yml
hw02/shop_api/tests/: test_hw02.py
hw04/: README.md  pytest.ini
hw04/demo_service/: docker-compose.yml
hw04/demo_service/api/: contracts.py  main.py  users.py  utils.py
hw04/tests/: conftest.py  pytest_stable_files.py  test_demo_service.py  test_user_promotion.py  test_user_register.py  test_user_retrieval.py
